Some changes made to Cart module